<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Consulta" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize">

            <EditText
                android:id="@+id/etDniPaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dni"
                android:inputType="number"
                android:maxLength="8"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:nextFocusUp="@id/btnBuscar"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quest"
            android:textStyle="bold"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/nav_draw"
            android:onClick="onBuscar"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etApPatPaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido_paterno"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:focusable="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etApMatPaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido_materno"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:focusable="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etNombresPaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombres"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:focusable="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etEdadPaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edad"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:focusable="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etSaldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Saldo"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="modify"
            android:textStyle="bold"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/nav_draw"
            android:onClick="onModificar"/>

        <!--TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/buscar"
            android:padding="20dp"
            android:textSize="30sp"
            android:layout_marginTop="?attr/actionBarSize" /-->

    </LinearLayout>

</FrameLayout>